# mojiben

./: .gitattributes  .gitignore  .gitmodules  CDebug.h  CGdiObj.h  CMakeLists.txt  CRgn.h  Common.h  HISTORY.txt  HowToBuild.txt  KanjiDataDlg.h  LICENSE.txt  NOTE.txt  README-ENG.txt  README.txt  README_en.txt  README_ja.txt  Region.cpp  compress.sh  deploy.bat  installer-EH.iss  installer-EHG.iss  installer-EL.iss  installer-ELG.iss  installer.iss  kakijun.h  mstr.h
.github/: copilot-instructions.md
MyLib/: CMakeLists.txt  MyLib.cpp  MyLib.h
bmp2rgn/: CMakeLists.txt  bmp2rgn.cpp
data/: README.txt
data/01Kana/: BgMenu_en.txt  Main.txt  MojiMenu_en.txt  MojiMenu_ja.txt  Romaji.txt  Text.txt
data/01Kana/kkj/: あ-02.rgn  あ.kkj  い-01.rgn  い.kkj  う-02.rgn  う.kkj  え-04.rgn  え.kkj  お-00.rgn  お-01.rgn  お-04.rgn  お-05.rgn  お.kkj  か-03.rgn  か-04.rgn  か.kkj  き-00.rgn  き-02.rgn  き-04.rgn  き.kkj  く-00.rgn  け-00.rgn  け-02.rgn  け.kkj  こ-00.rgn  こ-02.rgn  こ.kkj  さ.kkj  し-00.rgn  し.kkj  す-01.rgn  す-03.rgn  す.kkj  せ-01.rgn  せ-02.rgn  せ-04.rgn  せ.kkj  そ-00.rgn  そ-01.rgn  そ-02.rgn  (+224 more)
data/02Alphabet/: BgMenu_en.txt  BgMenu_ja.txt  Main.txt  MojiMenu_en.txt  MojiMenu_ja.txt  Text.txt
data/02Alphabet/kkj/: L-a.kkj  L-b-00.rgn  L-b.kkj  L-c.kkj  L-d.kkj  L-e-01.rgn  L-e.kkj  L-f-00.rgn  L-f-01.rgn  L-f.kkj  L-g-01.rgn  L-g-02.rgn  L-g.kkj  L-h.kkj  L-i-00.rgn  L-i-01.rgn  L-i.kkj  L-j-00.rgn  L-j.kkj  L-k-00.rgn  L-k-01.rgn  L-k.kkj  L-l-00.rgn  L-l.kkj  L-m-00.rgn  L-m-03.rgn  L-m-04.rgn  L-m.kkj  L-n-00.rgn  L-n-01.rgn  L-n.kkj  L-o-00.rgn  L-o.kkj  L-p.kkj  L-q-00.rgn  L-q.kkj  L-r-00.rgn  L-r.kkj  L-s-00.rgn  L-s-01.rgn  (+79 more)
data/03Number/: BgMenu_en.txt  BgMenu_ja.txt  MojiMenu_en.txt  MojiMenu_ja.txt  Text.txt
data/04Kanji1/: BgMenu_en.txt  BgMenu_ja.txt  Examples.txt  Meaning_en.txt  Meaning_ja.txt  MojiMenu_en.txt  MojiMenu_ja.txt  Reading.txt  Text.txt
data/04Kanji1/kkj/: 一.kkj  七-01.rgn  七.kkj  三-02.rgn  三.kkj  上-00.rgn  上-01.rgn  上-02.rgn  上.kkj  下.kkj  中-02.rgn  中-04.rgn  中.kkj  九-03.rgn  九.kkj  二-01.rgn  五-01.rgn  五-02.rgn  五-03.rgn  五.kkj  人-00.rgn  人-01.rgn  休-00.rgn  休-01.rgn  休-02.rgn  休-03.rgn  休-04.rgn  休-05.rgn  休.kkj  先-00.rgn  先-02.rgn  先-03.rgn  先-04.rgn  先-05.rgn  先-06.rgn  先.kkj  入.kkj  八-00.rgn  六-00.rgn  六-01.rgn  (+288 more)
data/05Kanji2/: ContextMenu_ja.txt  Examples.txt  Meaning_en.txt  Meaning_ja.txt  MojiMenu_en.txt  MojiMenu_ja.txt  Reading.txt  Text.txt
data/05Kanji2/kkj/: 万-00.rgn  万-04.rgn  万.kkj  丸-05.rgn  (+1013 more)
data/06Kanji3/: BgMenu_ja.txt  Examples.txt  Meaning_en.txt  Meaning_ja.txt  MojiMenu_en.txt  MojiMenu_ja.txt  Reading.txt  Text.txt
data/07Kanji4/: BgMenu_ja.txt  ContextMenu_ja.txt  Examples.txt  Meaning_en.txt  Meaning_ja.txt  MojiMenu_en.txt  MojiMenu_ja.txt  Reading.txt  Text.txt
data/08Kanji5/: BgMenu_ja.txt  ContextMenu_en.txt  ContextMenu_ja.txt  Examples.txt  Meaning_en.txt  Meaning_ja.txt  MojiMenu_ja.txt  Reading.txt  Text.txt
data/09Kanji6/: BgMenu_ja.txt  ContextMenu_ja.txt  Examples.txt  Meaning_en.txt  Meaning_ja.txt  MojiMenu_ja.txt  Reading.txt  Text.txt
kanjigrade/: CMakeLists.txt  kanjigrade.cpp  kanjigrade.h
kkjplay/: CMakeLists.txt  kakijun.h  kkjplay.cpp  kkjplay_res.rc  read_all.cpp
kkjplay/lang/: en_US.rc
makebmp/: CMakeLists.txt  makebmp.cpp
mojiben1/: .gitignore  CMakeLists.txt  KatakanaHiragana.doc  LICENSE.txt  README.txt  hiragana.cpp  installer.iss  kakijun.h  katakana.cpp  mojiben1.cpp  mojiben1_res.rc  mojiben1_res.rc2  mojidata.h
mojiben1/lang/: en_US.rc  ja_JP.rc
mojiben1/tests/: a0.cpp  c.cpp  d.cpp  k.cpp
mojiben1/tests2/: hiragana.cpp  katakana.cpp
mojiben2/: .gitignore  Alphabet.doc  CMakeLists.txt  LICENSE.txt  Makefile.bcc  PLL.cpp  PUL.cpp  README.txt  installer.iss  kakijun.h  lowercase.cpp  mojiben2.cpp  mojiben2_res.rc  uppercase.cpp
mojiben2/lang/: en_US.rc  ja_JP.rc
mojiben2/tests2/: lowercase.cpp  uppercase.cpp
mojiben3/: CMakeLists.txt  Kanji.txt  LICENSE.txt  Makefile.bcc  README.txt  Reading.txt  digits.cpp  installer.iss  kakijun.h  kazoekata.doc  mojiben3.cpp  mojiben3_res.rc
mojiben3/lang/: en_US.rc  ja_JP.rc
mojiben3/tests/: a0.cpp  k.cpp  k0.cpp
mojiben4/: CMakeLists.txt  KanjiDataDlg.h  LICENSE.txt  Makefile.bcc  README.txt  examples.cpp  installer.iss  kakijun.h  kanji1.cpp  map.cpp  mojiben4.cpp  mojiben4_res.rc  readings.cpp
mojiben4/lang/: en_US.rc  ja_JP.rc
mojiben4/tests/: a0.cpp  c.cpp  d.cpp  k.cpp
mojiben4/tests2/: kanji1.cpp  region.cpp
mojiben5/: CMakeLists.txt  KanjiDataDlg.h  LICENSE.txt  examples.cpp  kakijun.h  kanji2.cpp  mojiben5.cpp  mojiben5_res.rc  readings.cpp
mojiben5/lang/: en_US.rc  ja_JP.rc
mojiben5/tests/: a0.cpp  k0.cpp  kanji-strokes.7z  kanji.cpp
mojiben6/: CMakeLists.txt  KanjiDataDlg.h  examples.cpp  kakijun.h  kanji3.cpp  mojiben6.cpp  mojiben6_res.rc  readings.cpp
mojiben6/lang/: en_US.rc  ja_JP.rc
mojiben6/tests/: a0.cpp  k0.cpp  kanji.cpp  kanji3-strokes.7z
mojiben7/: CMakeLists.txt  examples.cpp  kakijun.h  kanji4.cpp  mojiben7.cpp  mojiben7_res.rc  readings.cpp
mojiben7/lang/: en_US.rc  ja_JP.rc
mojiben7/tests/: _kanji4_strokes.7z  a0.cpp  k0.cpp  kanji.cpp
mojiben8/: CMakeLists.txt  examples.cpp  kakijun.h  kanji5.cpp  mojiben8.cpp  mojiben8_res.rc  readings.cpp
mojiben8/lang/: en_US.rc  ja_JP.rc
mojiben8/res/: RecKey.mac
mojiben8/tests/: _kanji5_strokes.7z  a0.cpp  k0.cpp  kanji.cpp
mojiben9/: CMakeLists.txt  examples.cpp  kakijun.h  kanji6.cpp  mojiben9.cpp  mojiben9_res.rc  readings.cpp
mojiben9/lang/: en_US.rc  ja_JP.rc
mojiben9/tests/: _kanji6_strokes.7z  a0.cpp  k0.cpp  kanji.cpp
python/: 1.py  1.txt  2.py  2.txt  3.py  3.txt  4.py  4.txt  5.py  5.txt  6.py  6.txt  basic.tsv  batch.py  grade1.txt  grade2.txt  grade3.txt  grade4.txt  grade5.txt  grade6.txt
python/raw/: grade1.txt  grade2.txt  grade3.txt  grade4.txt  grade5.txt  grade6.txt
region-tests/: .gitignore  300to254.cpp  convert.cpp  tests.cpp
region-tests2/stage/: CMakeLists.txt  convert.cpp  main.cpp
rgn2bmp/: CMakeLists.txt  read_all.h  rgn2bmp.cpp
tests/region1/: 300to254.cpp  convert.cpp
tests/region2/: convert2.cpp
(+5885 files in other folders)
